#432 Adds support for Java 14 records (#437)